@@ -1,0 +1,5 @@
+yesPhotos
+Decay Upsilon(4S)
+1.0   e+  e-    VLL;
+Enddecay
+End
